infrastructure/gatekeeper/tests/ingress-wafv2-public-alb/pass-with-waf.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test
  namespace: x
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-southeast-2:123456789012:regional/webacl/ex/00000000-0000-0000-0000-000000000001
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: s
                port:
                  number: 80
